United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7092412 G1: Some roots not marked during an initial mark that gets an evacuation failure
7092412 : G1: Some roots not marked during an initial mark that gets an evacuation failure

Details
Type:
Bug
Submit Date:
2011-09-19
Status:
Closed
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7u2
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
While investigating the issues described in 7086533 and 7086538, marking verification has identified some missing marks:

[GC remark
 VerifyDuringGC:(before)[Verifying threads Roots (excluding permgen) Permgen roots HeapRegionSets HeapRegions RemSet syms strs zone dict hand C-heap code cache ]
 VerifyDuringGC:(after)[Verifying threads Roots (excluding permgen)

Root location 0x0072f3f4 points to dead obj 0x099da910
nsk.share.gc.LinkedMemoryObject 
 - klass: 'nsk/share/gc/LinkedMemoryObject'
 - ---- fields (total size 6 words):
 - private 'storage' '[B' @8  [B (99fce38)
 - private 'next' 'Lnsk/share/gc/LinkedMemoryObject;' @12  a 'nsk/share/gc/LinkedMemoryObject' (99da8f8)
 - private 'prev' 'Lnsk/share/gc/LinkedMemoryObject;' @16  NULL

Root location 0x0072f3fc points to dead obj 0x099ff548
nsk.share.gc.LinkedMemoryObject 
 - klass: 'nsk/share/gc/LinkedMemoryObject'
 - ---- fields (total size 6 words):
 - private 'storage' '[B' @8  NULL
 - private 'next' 'Lnsk/share/gc/LinkedMemoryObject;' @12  NULL
 - private 'prev' 'Lnsk/share/gc/LinkedMemoryObject;' @16  NULL

                                    

Comments
EVALUATION

See main CR
                                     
2011-10-22
EVALUATION

Not able to find behaviour changes,
                                     
2011-10-18
EVALUATION

http://hg.openjdk.java.net/hsx/hsx22/hotspot/rev/66db4a2fc13c
                                     
2011-10-12
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/663cb89032b1
                                     
2011-09-21
SUGGESTED FIX

In the evacuation failure handling code; when a root object is successfuly forwarded to itself - mark the root object.
                                     
2011-09-19
EVALUATION

Some root objects not being marked during an initial mark pause that gets an evacuation failure.
                                     
2011-09-19



Hardware and Software, Engineered to Work Together